<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_trending" >Trending</string>
    <string name="title_top_headlines">Top Headline</string>
    <string name="sign_in_with_email">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="email_hint" >Email</string>
    <string name="password_hint" >Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="bookmark">Bookmark</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have An Account? </string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="user_settings" >User Settings</string>
    <string name="change_profile_picture" >Change Profile Picture</string>
    <string name="save_changes">Save</string>
    <string name="username_hint">Username</string>
    <string name="search_hint">Search for anything</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="no_bookmarks">No Bookmark Found</string>
    <string name="sign_in">Sign In</string>
</resources>