<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    >

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/big_logo"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/password_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/emailSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_email"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_with_google"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>